# template

./: Cargo.toml  README.md  tailwind.config.js
src/: app.rs  main.rs
