[package]
name = "template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies] 
# either
leptos = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
serde = "1.0.217"

# server
axum = { version = "0.7", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
console_error_panic_hook = "0.1"
leptos_axum = { version = "0.7.0", optional = true }
leptos_meta = { version = "0.7.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "timeout", "trace"], optional = true }
thiserror = { version = "2", optional = true }
http = { version = "1", optional = true }

# frontend
wasm-bindgen = "=0.2"
serde_json = "1.0.135"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:thiserror",
    "dep:tokio",
    "dep:http",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "template"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
